--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,30 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^8.0.2
+  flutter_bloc: ^8.0.1  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_database: ^9.0.5
+  firebase_auth: ^3.3.13
+  firebase_core: ^1.14.0
+  confetti: ^0.6.0
+  flutter_svg: ^1.0.3
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  cloud_firestore: ^3.1.11
+  sqflite: ^2.0.2
+  rflutter_alert: ^2.0.4
+  date_format: ^2.0.6
+  flutter_spinkit: ^5.1.0
+  google_sign_in: ^5.2.4
+  shared_preferences: ^2.0.13
+  firebase_storage: ^10.2.11
+  image_picker: ^0.8.5
+  fluttertoast: ^8.0.9
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -73,11 +91,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Poppins-SemiBold.ttf
+        - asset: fonts/Poppins-Bold.ttf
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
